Source/WebCore/editing/Editor.cpp
@@ -330,7 +330,7 @@ bool Editor::isSelectTrailingWhitespaceEnabled()
     return client() && client()->isSelectTrailingWhitespaceEnabled();
 }
 
-bool Editor::deleteWithDirection(SelectionDirection direction, TextGranularity granularity, bool killRing, bool isTypingAction)
+bool Editor::deleteWithDirection(SelectionDirection direction, TextGranularity granularity, bool shouldAddToKillRing, bool isTypingAction)
 {
     if (!canEdit())
         return false;
@@ -340,8 +340,8 @@ bool Editor::deleteWithDirection(SelectionDirection direction, TextGranularity g
             TypingCommand::deleteKeyPressed(document(), canSmartCopyOrDelete() ? TypingCommand::SmartDelete : 0, granularity);
             revealSelectionAfterEditingOperation();
         } else {
-            if (killRing)
-                addToKillRing(selectedRange().get(), false);
+            if (shouldAddToKillRing)
+                addRangeToKillRing(*selectedRange().get(), KillRingInsertionMode::AppendText);
             deleteSelectionWithSmartDelete(canSmartCopyOrDelete());
             // Implicitly calls revealSelectionAfterEditingOperation().
         }
@@ -349,8 +349,8 @@ bool Editor::deleteWithDirection(SelectionDirection direction, TextGranularity g
         TypingCommand::Options options = 0;
         if (canSmartCopyOrDelete())
             options |= TypingCommand::SmartDelete;
-        if (killRing)
-            options |= TypingCommand::KillRing;
+        if (shouldAddToKillRing)
+            options |= TypingCommand::AddsToKillRing;
         switch (direction) {
         case DirectionForward:
         case DirectionRight:
@@ -367,7 +367,7 @@ bool Editor::deleteWithDirection(SelectionDirection direction, TextGranularity g
     // FIXME: We should to move this down into deleteKeyPressed.
     // clear the "start new kill ring sequence" setting, because it was set to true
     // when the selection was updated by deleting the range
-    if (killRing)
+    if (shouldAddToKillRing)
         setStartNewKillRingSequence(false);
 
     return true;
@@ -1095,7 +1095,6 @@ void Editor::reappliedEditing(PassRefPtr<EditCommandComposition> cmd)
 Editor::Editor(Frame& frame)
     : m_frame(frame)
     , m_ignoreCompositionSelectionChange(false)
-    , m_shouldStartNewKillRingSequence(false)
     // This is off by default, since most editors want this behavior (this matches IE but not FF).
     , m_shouldStyleWithCSS(false)
     , m_killRing(std::make_unique<KillRing>())
@@ -1334,7 +1333,7 @@ void Editor::performDelete()
         return;
     }
 
-    addToKillRing(selectedRange().get(), false);
+    addRangeToKillRing(*selectedRange().get(), KillRingInsertionMode::AppendText);
     deleteSelectionWithSmartDelete(canSmartCopyOrDelete());
 
     // clear the "start new kill ring sequence" setting, because it was set to true
@@ -2847,17 +2846,29 @@ void Editor::transpose()
     replaceSelectionWithText(transposed, false, false, EditActionInsert);
 }
 
-void Editor::addToKillRing(Range* range, bool prepend)
+void Editor::addRangeToKillRing(const Range& range, KillRingInsertionMode mode)
+{
+    addTextToKillRing(plainText(&range), mode);
+}
+
+void Editor::addTextToKillRing(const String& text, KillRingInsertionMode mode)
 {
     if (m_shouldStartNewKillRingSequence)
         killRing().startNewSequence();
 
-    String text = plainText(range);
-    if (prepend)
-        killRing().prepend(text);
-    else
-        killRing().append(text);
     m_shouldStartNewKillRingSequence = false;
+
+    // If the kill was from a backwards motion, prepend to the kill ring.
+    // This will ensure that alternating forward and backward kills will
+    // build up the original string in the kill ring without permuting it.
+    switch (mode) {
+    case KillRingInsertionMode::PrependText:
+        killRing().prepend(text);
+        break;
+    case KillRingInsertionMode::AppendText:
+        killRing().append(text);
+        break;
+    }
 }
 
 void Editor::startAlternativeTextUITimer()
